# ownn-browser

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
app/browser/: BookmarkDialog.cpp  BookmarkDialog.h  BrowserEngine.cpp  BrowserEngine.h  BrowserTab.cpp  BrowserTab.h  BrowserWindow.cpp  BrowserWindow.h  ClearDataDialog.h  DownloadDialog.cpp  DownloadDialog.h  HistoryDialog.cpp  HistoryDialog.h  SettingsDialog.cpp  SettingsDialog.h  TabManager.cpp  TabManager.h
app/network/: CookieManager.cpp  CookieManager.h  DownloadManager.cpp  DownloadManager.h  HttpClient.cpp  HttpClient.h  ProxyManager.cpp  ProxyManager.h
app/reader/: ReaderMode.cpp  ReaderMode.h
app/security/: CertificateManager.cpp  CertificateManager.h  PermissionManager.cpp  PermissionManager.h  SafeBrowsing.cpp  SafeBrowsing.h
app/storage/: BookmarkManager.cpp  BookmarkManager.h  CacheManager.cpp  CacheManager.h  HistoryManager.cpp  HistoryManager.h  SQLiteDB.cpp  SQLiteDB.h  SessionManager.cpp  SessionManager.h  SettingsManager.cpp  SettingsManager.h
app/utils/: Logger.cpp  Logger.h
resources/: resources.qrc
tests/: CMakeLists.txt  test_bookmarks.cpp  test_history.cpp  test_settings.cpp
